<resources>

    <string name="ads_app" translatable="false">앱코드</string>
    <string name="banner1" translatable="false">배너1</string>
    <string name="InterstitialAd" translatable="false">전면광고</string>
    <string name="ads_Code2" translatable="false">배너2</string>

    <!--영어 버전-->
    <string name="app_name">AUto - a new mood every day</string>
    <string name="version_name">1.7.2</string>

    <string name="makingAlert">The service is being prepared.</string>
    <string name="nonAlert">preparing</string>
    <string name="nonPageAlert">Page is in preparation.</string>
    <string name="noImageAlert">Failed to find image.</string>
    <!--스플래쉬 스크린 뷰페이저 튜토리얼-->

    <string name="tap1_title">Select the folder containing the pictures and select the Period to end!</string>
    <string name="tap1_subTitle">Extensions for jpg, jpeg, gif, and png are now supported.</string>

    <string name="tap2_title">You can also set AutoPlay settings and change order after booting!</string>
    <string name="tap2_subTitle">We are going to show you a better look at the patch.</string>

    <!-- Global Warning Section -->
    <string name="noNetworkErrorTitle">There is no network connection.</string>
    <string name="noNetworkErrorContent">Make sure you are connected to the network.</string>

    <string name="mobileNetworkWarningTitle">You are connected to a mobile network.</string>
    <string name="mobileNetworkWarningContent">Downloading high-capacity pictures may result in additional data charges.</string>
    <string name="SetWallpaperJob">We applied all of this equipment because of its low version and inability to separate.</string>

    <!-- OpenDialog -->
    <string name="openDialog_title">New type the tag.</string>
    <string name="openDialog_content">Modifies existing</string>
    <string name="openDialog_content2">keyword.</string>
    <string name="openDialog_error">Tag already exists.</string>
    <string name="openDialog_hint">Type your new Tag</string>
    <string name="openDialog_cancel">Cancel</string>
    <string name="openDialog_ok">Confirm</string>

    <string name="opendialog_newAlert">A new tag has been added.</string>
    <string name="opendialog_noResult">Keywords that do not have a search result.</string>
    <string name="opendialog_checkAvail">inspecting whether a valid tag.</string>
    <string name="opendialog_error2">Incorrect input or blank.</string>

    <!-- TabLayout -->
    <string name="tab_1">Pictures</string>
    <string name="tab_2">Discover</string>
    <string name="tab_3">Auto settings</string>

    <!-- SetGetImageDir -->
    <string name="SetGetImagedir_ResorV">The resolution of this device</string>
    <string name="SetGetImagedir_GetV">Method of Load Photos</string>
    <string name="SetGetImagedir_GetsV">Select the folder where the pictures are located.</string>

    <string name="SetGetImageDir_ERROR1">The image file could not be found in the specified path.</string>
    <string name="SetGetImageDir_ERROR2">No image, please add image.</string>

    <string name="SetGetImageDir_detailSet1Title">Directly select pictures</string>
    <string name="SetGetImageDir_detailSet1Con">Open the gallery to select the pictures.</string>
    <string name="SetGetImageDir_detailSet1Con2">List of selected pictures.</string>

    <!-- get_from_gallery_layout -->
    <string name="allDelteBtn">Delete All</string>
    <string name="saveBtn">Save</string>
    <string name="openGallery">Open Gallery</string>
    <string name="oldPhotosText">List of saved pictures</string>
    <string name="newPhotosText">The newly selected pictures.</string>

    <string name="saveDialogTitle">Save imported pictures</string>
    <string name="saveDialogMessage">Save all of the pictures that you have imported from the gallery.</string>
    <string name="saveDialogPosi">OK</string>
    <string name="saveDialogNega">Cancel</string>


    <!-- PhotoDetailView -->
    <string name="PhotoDetail_DialogTitle">About this Page</string>
    <string name="PhotoDetail_DialogMessage">It is not recommended for data network environments because it is high quality when you download pictures.</string>
    <string name="PhotoDetail_DialogOk">OK</string>

    <string name="PhotoDetail_DialogTitle2">The location of the background screen you want to change</string>
    <string name="PhotoDetail_DialogItem1">Only LockScreen</string>
    <string name="PhotoDetail_DialogItem2">Only DefaultScreen</string>
    <string name="PhotoDetail_DialogItem3">All</string>

    <string name="PhotoDeatil_Downloading">Downloading image…</string>

    <string name="PhotoDetail_SelectQua">Please select download quality.</string>
    <string name="PhotoDetail_AlreadyExist">Image already exists.</string>


    <!-- ListsPfPhotos -->
    <string name="ListsPfPhotos_DialogTitle">About this Page</string>
    <string name="ListsPfPhotos_DialogMessage">You can click a picture to see more information.</string>
    <string name="ListsPfPhotos_DialogOk">OK</string>
    <string name="ListOfPhotos_questMessage">Please input the keyword what you want.</string>


    <!-- tab1Frag -->
    <string name="tab1_gallerySmall">From gallery</string>
    <string name="tab1_galleryTitle">Pictures of my choice</string>
    <string name="tab1_galleryContent">Pictures</string>
    <string name="tab1_galleryWarning">Could not find any pictures.</string>

    <!-- tab2_frag -->
    <string name="tab2_toolbarText">Explore new pictures</string>
    <string name="tab2_DialogTitle">About this Page</string>
    <string name="tab2_DialogMessage">You can change it by typing in the keyword you want by pressing a keyword, and the pictures you import through the keyword changes are shown below. You can call up to six keywords at the same time.</string>
    <string name="tab2_DialogOk">OK</string>

    <string name="tab2_resetTitle">Do you want to initialize the list of keywords?</string>
    <string name="tab2_resetContent">It will initializes the list of keywords and cannot be reversed.</string>


    <!-- tab3_frag -->
    <string name="tab3_detailSet1Title">AutoPlay After Boot</string>
    <string name="tab3_detailSet1Con">Start service automatically after booting up</string>
    <string name="tab3_title_BootViewEnabled">AutoPlay After Boot</string>
    <string name="tab3_title_BootViewDisabled">No AutoPlay After Boot</string>
    <string name="tab3_title_cycleView">Period</string>
    <string name="tab3_detailLine1">Change settings</string>
    <string name="tab3_detailLine2">Directory</string>
    <string name="tab3_t3_sub">Must be at least 1 minute.</string>

    <string name="tab3_t1">Change wallpaper automatically</string>
    <string name="tab3_t2">Picture Change Order</string>
    <string name="tab3_ActStateActivated">Service in operation</string>
    <string name="tab3_ActStateDisabled">awaiting execution command</string>
    <string name="tab3_ShuffleStateOn">Changing in order</string>
    <string name="tab3_ShuffleStateOff">Randomly</string>
    <string name="tab3_t3">Change frequency</string>
    <string name="tab3_t4">path settings to recall pictures</string>
    <string name="tab3_t5">open directory selector</string>
    <string name="tab3_t6">Save changes</string>

    <string name="tab3_snackBar1">Your changes have been saved. Start the service.</string>
    <string name="tab3_snackBar2">Your changes have been saved.</string>

    <string name="tab3_alertStartService">Service started</string>

    <string name="tab3_detailSet4Title">Method of Load Photos</string>

    <string name="tab3_showGetFromWhat1">Importing from selected folder.</string>
    <string name="tab3_showGetFromWhat2">Importing photos of your choice.</string>
    <string name="tab3_showPictGetCnt"> photos</string>

    <!--라이선스 표시 페이지-->
    <string name="mainTitle">Always for new moods. </string>

    <string name="subTitle1">Wallpaper,</string>
    <string name="subTitle2">  change one\'s mind</string>

    <string name="title1">This app is subject to the</string>
    <string name="title12">MIT OpenSource License </string>
    <string name="title13">Regulations.</string>

    <string name="title2">It is also made from a number of open sources.</string>


    <string name="credit">Credit</string>

    <string name="dialog1Title">Image file not found.</string>
    <string name="dialog1Con">The selected folder does not appear to have an image. Please check the folder again and ask if you continue to experience any problems.</string>

    <string name="dialog2Title">Image file too few. </string>
    <string name="dialog2Con">Run, however, it is recommended that you use at least 3 photos.</string>

    <string name="dialogOkay">I see.</string>

    <!--Select_Folder-->
    <string name="goSdcard">To the first directory(sdcard/)</string>
    <string name="goPreDir">Previous directory</string>
    <string name="chooseBtn">Select this folder</string>
    <!-- time  -->
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>

</resources>
