<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blueEnabled"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:src="@drawable/left_arrow_icon"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/githubBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:src="@drawable/github_logo"
                android:tint="@color/white" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_weight="8.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="220dp"
            android:text="@string/mainTitle"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTitle1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTitle2"
                android:textColor="#F8F8F8"
                android:textSize="18sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title1"
            android:textColor="#F8F8F8"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title12"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title13"
            android:textColor="#F8F8F8"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/credit"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/credit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Omie/walli-e"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <!--<TextView-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:textStyle="normal"-->
                <!--android:textColor="@color/white"-->
                <!--android:text="https://airbnb.io/lottie/"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="23dp" />-->

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>
    <TextView
        android:layout_weight="0.5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:text="Copyright (c) 2019 MODORI"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />


</LinearLayout>


