<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_theme"
    android:orientation="vertical"
    android:padding="@dimen/defaultMargin">

    <TextView
        android:id="@+id/Title_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openDialog_title"
        android:textColor="@color/semiBlack"
        android:textSize="@dimen/titleText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="기존의 House 태그를 변경합니다."
        android:textColor="@color/semiBlack"
        android:textColorHint="@color/semiBlack"
        android:textSize="@dimen/descText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title_dia" />

    <TextView
        android:id="@+id/warning_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="이미 중복된 태그가 존재합니다."
        android:textSize="@dimen/smallAlertText"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitle_dia" />

    <EditText
        android:id="@+id/inputText_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verticalMargin"
        android:hint="@string/openDialog_hint"
        android:singleLine="true"
        android:textColor="@color/semiBlack"
        android:textColorHint="@color/semiBlack"
        app:layout_constraintTop_toBottomOf="@id/warning_dia" />

    <Button
        android:id="@+id/positiveBtn_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginStart="@dimen/verticalMargin"
        android:layout_marginEnd="@dimen/verticalMargin"
        android:layout_marginBottom="@dimen/verticalMargin"
        android:background="@drawable/button_bg"
        android:text="@string/openDialog_ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputText_dia" />


</androidx.constraintlayout.widget.ConstraintLayout>